# digitacaoEFDR

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/app/: app.cpp  app.h
src/core/: lessonEngine.cpp  lessonEngine.h  lessons.h  stats.h  timer.h
src/ui/: keyboardView.cpp  keyboardView.h
